--- a/src/components/Middle/Account/AccountPage.css
+++ b/src/components/Middle/Account/AccountPage.css
@@ -111,3 +111,9 @@ div::-webkit-scrollbar-thumb {
   border-radius: 10px;
   background-color: #818181;
 }
+
+.myAlbums .addPlaylist img {
+  width: 150px;
+  height: 100px;
+  cursor: pointer;
+}
