--- a/src/mobile.css
+++ b/src/mobile.css
@@ -1,45 +1,38 @@
-@media screen and (min-width: 821px){
-    .mobile-song-view
-    {
-        display: none;
-        visibility: hidden;
-    }
+@media screen and (min-width: 821px) {
+  .mobile-view {
+    display: none;
+    visibility: hidden;
+  }
 }
 
+@media screen and (max-width: 820px) {
+  .Sidebar {
+    width: 75px;
+    overflow: hidden;
+  }
 
-@media screen and (max-width: 820px){
-    .Sidebar {
-        width: 75px;
-        overflow: hidden;
-      }
+  .SidebarButton p {
+    display: none;
+  }
 
-      .SidebarButton p {
-        display: none;
-      }
-    
-      .SidebarButton {
-        height: 50px;
-      }
-    
-      nav {
-        width: 75px;
-      }
-    
-      #page {
-        grid-template-columns: 75px 1fr !important;
-    }
-    
-    .SidebarLogo h2 {
-        visibility: hidden;
-      }
-    
-      
+  .SidebarButton {
+    height: 50px;
+  }
+
+  nav {
+    width: 75px;
+  }
+
+  #page {
+    grid-template-columns: 75px 1fr !important;
+  }
+
+  .SidebarLogo h2 {
+    visibility: hidden;
+  }
 }
 
-@media screen and (max-width: 800px){
-
-
-
+@media screen and (max-width: 820px) {
   #Soundbar {
     position: fixed;
     display: flex;
@@ -49,12 +42,11 @@
     height: 58px;
     /* overflow: hidden; */
     background-color: black;
-  
+
     user-select: none;
     align-items: center;
     margin-top: -4px;
   }
-
 
   .fullscreen-button {
     height: 20px;
@@ -84,7 +76,7 @@
     -webkit-overflow-scrolling: none;
     white-space: nowrap;
     padding-bottom: 5px;
-  
+
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
@@ -98,14 +90,13 @@
     display: flex;
     flex-direction: row;
   }
-  
+
   #player-name-area > .name-area-content img {
     margin-right: 10px;
     margin-left: -10px;
   }
-  
-  #control-like-btn
-  {
+
+  #control-like-btn {
     width: 50% !important;
   }
 
@@ -120,52 +111,191 @@
     margin-bottom: 0;
     margin-top: 20px;
   }
-  
-  .mobile-hidden
-  {
+
+  .mobile-hidden {
     visibility: hidden;
     display: none;
+    width: 0px !important;
+    height: 0px !important;
+    /*Causing issues for myAlbum Scrollbar*/
+    max-width: 0px !important;
+    max-height: 0px !important;
   }
 
-  #name-area-text
-  {
+  #name-area-text {
     font-size: 110%;
   }
 
-  .song-row
-  {
+  .song-row {
     display: flex !important;
     flex-direction: row;
     background-color: transparent !important;
+    width: 110%;
   }
 
   .playlistHeader {
     display: flex;
     flex-direction: column !important;
     justify-self: column !important;
-    align-items: center;    
+    align-items: center !important;
+    max-width: 100% !important;
+    max-height: 100% !important;
   }
 
-  .playlistHeader h1{
+  .playlistHeader h1 {
     margin-top: 15px !important;
-    font-size: 30px;
+    font-size: 25px !important;
   }
 
-  .playlistHeader h2{
-    font-size: 17.5px;
+  .playlistHeader h2 {
+    font-size: 16.5px;
     margin-top: 4px !important;
     margin-bottom: 4px !important;
   }
 
   .playlistHeader > img {
-    max-height: 75% !important;
-    max-width: 75% !important;
+    height: 200px;
+    width: 200px;
+    max-height: 100% !important;
+    filter: drop-shadow(0 0 0.75rem black);
+    border-radius: 10px;
+    align-self: center !important;
+  }
+
+  .playlistHeader .info {
+    align-self: center !important;
+    text-align: center !important;
+    margin: 0px !important;
+  }
+
+  .playlist-button-bar {
+    margin-bottom: 15px;
+  }
+
+  .mobile-song-view {
+    max-width: 80%;
+  }
+
+  .myAlbums {
+    /* -webkit-transform: scale(0.75);
+    -moz-transform: scale(0.75);
+    -ms-transform: scale(0.75);
+    transform: scale(0.75); */
+    display: flex;
+    flex-direction: column !important;
+    column-gap: 1px !important;
+  }
+  .PlaylistContainer {
+    height: 180px !important;
+    max-height: 80% !important;
+    max-width: 80% !important;
+  }
+
+  .PlaylistContainer img {
+    border-radius: 10px;
+    filter: drop-shadow(0 0 0.25rem black);
+    max-width: 85px;
+    max-height: 85px;
+    padding: 5px;
+  }
+
+  .pl-container-name_holder {
+    max-width: 95%;
+    font-size: 18px !important;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    display: block;
+    overflow: hidden;
+  }
+
+  .playlist-page {
+    max-width: 100% !important;
+  }
+
+  main {
+    width: 100% !important;
+  }
+
+  .mobile-song-row {
+    display: flex;
+    align-items: center;
+    justify-self: center;
+    width: 1440% !important;
+    max-width: 125% !important;
+  }
+
+  .mobile-song-row {
+    display: flex;
+    align-items: center;
+
+    background-color: transparent;
+    cursor: pointer;
+  }
+
+  .mobile-song-row > div > img {
+    border-radius: 10%;
+
+    height: 50px;
+    width: 50px;
+    margin-left: 5px;
+    margin-top: 5px;
+    margin-right: 5px;
+  }
+
+  .mobile-song-view .song-row {
+    max-width: 100% !important;
+  }
+
+  .mobile-song-view .song-row-name div {
+    font-size: 80%;
+  }
+
+  .account-layout header {
+    display: flex;
+    flex-direction: column !important;
+    justify-self: column !important;
+    align-items: center !important;
+    max-width: 100% !important;
+    max-height: 100% !important;
+  }
+
+  .account-layout header > img {
     filter: drop-shadow(0 0 0.75rem black);
     border-radius: 10px;
   }
 
-  .playlist-button-bar
-  {
-    margin-bottom: 15px;
+  .account-layout .profileName {
+    display: flex;
+    justify-items: center;
+    white-space: 0px;
+
+    max-width: 68vw !important;
+    overflow: hidden;
+  }
+
+  .account-layout .profileName h1 {
+    margin-top: 15px !important;
+
+    max-height: 50px;
+    padding: 0px;
+    font-size: 25px !important;
+    overflow: hidden;
+  }
+
+  .account-layout header .info h2 {
+    font-size: 20px !important;
+  }
+
+  .account-layout .profileName img {
+    margin-left: 20px;
+    width: 25px !important;
+    height: 25px !important;
+  }
+
+  .account-layout header .info {
+    margin-left: 20px;
+    flex-direction: column;
+    align-self: center !important;
+    text-align: center !important;
   }
 }
